<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_chat"
        android:icon="@android:drawable/stat_notify_chat"
        android:title="Chat"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search_tasks"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_tasks"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_sort_deadline"
        android:title="@string/sort_deadline_asc"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_team_members"
        android:title="@string/team_members"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_invite_member"
        android:title="@string/invite_members"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit_project"
        android:title="@string/edit_project"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_project"
        android:title="@string/delete"
        app:showAsAction="never" />
</menu>
